@@ -1,3 +1,6 @@
+- bootloader configuration:
+  o add support for crypted grub passwords
+
 Version 17.41 - 20 June 2016
 
 - bootloader:
